--- a/style.css
+++ b/style.css
@@ -34,3 +34,25 @@ header {
   margin-left: 10px;
   padding: 5px;
 }
+.card-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: center;
+}
+
+.movie-card {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.24);
+  margin: 20px;
+  padding: 20px;
+  width: 300px;
+  justify-self: center;
+  background-color: bisque;
+  border-radius: 10px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.movie-card img {
+  width: 100%;
+  border-radius: 10px;
+}
